--- a/index.html
+++ b/index.html
@@ -16,38 +16,32 @@
             { id: 4, Name: "greencircuits", Output: 1, Time: 0.5, Input: { copperwire: 3, ironplate: 1 } },
             { id: 5, Name: "science_auto", Output: 1, Time: 5.0, Input: { copperplate: 1, gearwheel: 1 } }];
 
+        function gettotalIngredientsNeeded(resource, desired) {
+            const inputs = Object.entries(resource.Input);
+            for (const [inputResource, count] of inputs) {
+                console.log(inputResource + ': ' + (desired * count) / resource.Output);
+            }
+            return []
+
+        }
+
         function needAssembler() {
             const desired = document.getElementById("amount").value;
-            const e = document.getElementById("product").selectedIndex;
-            console.log('resource Index: ' + e);
-            console.log('resource Name: ' + resources[e].Name)
-            console.log('desiredAmount: ' + desired);
+            const selectedResourceIndex = document.getElementById("product").selectedIndex;
+            const selectedResource = resources[selectedResourceIndex];
+            // console.log('resource Index: ' + e);
+            // console.log('resource Name: ' + resources[e].Name)
+            // console.log('desiredAmount: ' + desired);
 
             // Calculate needed amount assemblers           
-            const result = Math.ceil(parseInt(desired) / (resources[e].Output / resources[e].Time));
+            const result = Math.ceil(parseInt(desired) / (selectedResource.Output / selectedResource.Time));
             resultaat.innerHTML = result;
-            console.log(result + ' Assemblers needed for ' + desired + ' ' + resources[e].Name)
-
-            console.log(resources[e].Input);
-            const Input = resources[e].Input;
+            // console.log(result + ' Assemblers needed for ' + desired + ' ' + resources[e].Name)
 
             // Determine ingredient amounts
-            const inputs = Object.entries(Input);
-            for (const [resource, count] of inputs) {
-                console.log(resource + ': ' + (desired * count) / resources[e].Output); // logs the needed amount, no focus on storing it for further use.
-            }
+            const totalIngredientsNeeded = gettotalIngredientsNeeded(selectedResource, desired);
 
-            var i; // test for-loop, werkt niet naar behoren
-            var inputAmountsloop = 0;
-            for (i = 0, i < inputs.length; i++;) {
-                inputAmountsloop[i] = (desired * Input[i].value) / resources[e].Output
-                console.log('forloop ' + inputAmountsloop)
-            }
 
-            function inputAmount() { // niet functioneel
-                const inputAmount = (desired * Input.value) / resources[e].Output;
-                console.log('InputAmount: ' + inputAmount)
-            }
 
 
         }
@@ -62,7 +56,7 @@
         <option value="gearwheel">Iron Gear wheel</option>
         <option value="copperplate">Copper plate</option>
         <option value="copperwire">Copperwire</option>
-        <option value="greencircuits">Green Circuits</option>
+        <option value="greencircuits" selected>Green Circuits</option>
         <option value="science_auto">Automation Science</option>
 
     </select><br><br>
