fill products list

--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     <title>Document</title>
 </head>
 
-<body>
+<body onload="fillProductsList();">
     <h1>Factorio Calculator</h1>
     <p>How many products do you want to assemble?:</p>
-    Product: <select id="product">
-        <option value="ironplate">Iron plate</option>
+    Product: <select id="products">
+        <!-- <option value="ironplate">Iron plate</option>
         <option value="gearwheel">Iron Gear wheel</option>
         <option value="copperplate">Copper plate</option>
         <option value="copperwire">Copperwire</option>
         <option value="greencircuits" selected>Green Circuits</option>
-        <option value="science_auto">Automation Science</option>
+        <option value="science_auto">Automation Science</option> -->
 
     </select><br><br>
     Amount: <input type="number" id="amount" value="24"><br><br>
