started function sumSameResources

--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
     <h4>Ingredients:</h4>
     <ul id="ingredients">
     </ul>
+    <!-- <h4>Ingredients of Ingredients:</h4>
+    <ul id="ingredients">
+    </ul> -->
+
+    <h4>Total Raw:</h4>
+    <ul id="totalRaw">
+    </ul>
     <script type="text/javascript" src="script.js"></script>
 </body>
 
