load resource image

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
     <input type="radio" name="assemblermachine" value="0.5" checked> Machine 1 (Grey)<br><br>
     <!-- <input type="radio" name="assemblermachine" value="machine 2"> Machine 2 (Grey)<br><br> -->
 
-    <input type="button" id="button" value="Fabricate" onclick="needAssembler();"><br>
+    <input type="button" id="button" value="Fabricate" onclick="needAssembler();"><br><BR>
+    <img id="selectedResource" src="" />
+
     <h4>Assemblers needed: </h4>
     <p id="resultaat"></p>
     <h4>Ingredients:</h4>
@@ -43,6 +45,7 @@
     <h4>Total Raw:</h4>
     <ul id="totalRaw">
     </ul>
+
     <script type="text/javascript" src="script.js"></script>
 </body>
 
